--- a/fausse_front_end/src/App.css
+++ b/fausse_front_end/src/App.css
@@ -1,10 +1,14 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  min-height: 100vh;
 }
 
+p {
+  margin: 0;
+}
+/*
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +43,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
