--- a/fausse_front_end/src/components/header/Header.css
+++ b/fausse_front_end/src/components/header/Header.css
@@ -21,6 +21,10 @@ li {
   border-right: 1px solid red;
 } */
 
+.nav-link {
+  font-size: 16px;
+}
+
 .active {
   font-weight: bold;
   color: white;
